--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ inference_in/
 *inference_out/
 raw_data/
 processed_data/
+**/*.tif
 
 ## The .gitignore file specifies things that git should ignore. 
 ## This default template includes entries for R, Python and visual studio
@@ -470,3 +471,4 @@ __pycache__/
 OpenCover/
 junit/
 testing_gdal.ipynb
+data/cresi/map.html
