--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ inference_in/
 raw_data/
 processed_data/
 **/*.tif
+data/cresi/
 
 ## The .gitignore file specifies things that git should ignore. 
 ## This default template includes entries for R, Python and visual studio
